<resources>
    <string name="app_name">Coo Homeless</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="n_o_possui_conta_ainda_crie_a_sua">Não possui conta ainda? Crie a sua</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="logo_splash_screen">Logo Splash Screen</string>
    <string name="fa_a_sua_parte">Faça sua parte</string>
    <string name="j_possui_cadastro_login"><u>Já possui cadastro? Login</u></string>
    <string name="criar_conta">Criar Conta</string>
    <string name="nome">Nome</string>
    <string name="drawer_open">Abrir navegação</string>
    <string name="drawer_close">Fechar navegação</string>
    <string name="sign_up">Sign up</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tipo_de_usu_rio">Tipo de Usuário:</string>
    <string name="colaborador">Colaborador</string>
    <string name="organiza_o">Organização</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ</string>
    <string name="endere_o">Endereço</string>
    <string name="username">Username</string>
    <string name="preference_file_key">com.coohomeless.PREFERENCE_FILE_KEY</string>
</resources>
